--- a/WINDHILLRT/app.json
+++ b/WINDHILLRT/app.json
@@ -1,26 +1,1 @@
-[
-    {
-        "id": 144,
-        "name": "TBox Voltage",
-        "unit": "V",
-        "displayBounds": {
-            "min": 0,
-            "max": 20
-        },
-        "active": true,
-        "description": "TBox internal voltage",
-        "numDigits": 2,
-        "noValueValue": "NaN",
-        "source": 0,
-        "sourceIndex": 0,
-        "interface": "CAN1",
-        "dataDirection": 1,
-        "dataType": 9,
-        "signalTask": 0,
-        "connection": "",
-        "connectionMqtt": null,
-        "vtab": null,
-        "limits": null,
-        "ranges": null
-    }
-]
+[{"id":144,"name":"TBox Voltage","unit":"V","displayBounds":{"min":0,"max":20},"active":true,"description":"TBox internal voltage","numDigits":2,"noValueValue":"NaN","source":0,"sourceIndex":0,"interface":"CAN1","dataDirection":1,"dataType":4,"signalTask":0,"connection":"","connectionMqtt":null,"vtab":null,"limits":null,"ranges":null},{"id":145,"name":"TBox current","unit":"A","displayBounds":{"min":0,"max":20},"active":true,"description":"TBox internal voltage","numDigits":4,"noValueValue":"NaN","source":0,"sourceIndex":1,"interface":"CAN1","dataDirection":1,"dataType":9,"signalTask":0,"connection":"","connectionMqtt":null,"vtab":null,"limits":null,"ranges":null},{"id":146,"name":"TBox speed","unit":"m/s","displayBounds":{"min":0,"max":20},"active":true,"description":"TBox internal voltage","numDigits":4,"noValueValue":"NaN","source":0,"sourceIndex":2,"interface":"CAN1","dataDirection":1,"dataType":9,"signalTask":0,"connection":"","connectionMqtt":null,"vtab":null,"limits":null,"ranges":null}]
