--- a/WINDHILLRT/app.json
+++ b/WINDHILLRT/app.json
@@ -1,1 +1,554 @@
-[{"id":144,"name":"TBox Voltage","unit":"V","displayBounds":{"min":0,"max":20},"active":true,"description":"TBox internal voltage","numDigits":2,"noValueValue":"NaN","source":0,"sourceIndex":0,"interface":"CAN1","dataDirection":1,"dataType":4,"signalTask":0,"connection":"","connectionMqtt":null,"vtab":null,"limits":null,"ranges":null},{"id":145,"name":"TBox current","unit":"A","displayBounds":{"min":0,"max":20},"active":true,"description":"TBox internal voltage","numDigits":4,"noValueValue":"NaN","source":0,"sourceIndex":1,"interface":"CAN1","dataDirection":1,"dataType":9,"signalTask":0,"connection":"","connectionMqtt":null,"vtab":null,"limits":null,"ranges":null},{"id":146,"name":"TBox speed","unit":"m/s","displayBounds":{"min":0,"max":20},"active":true,"description":"TBox internal voltage","numDigits":4,"noValueValue":"NaN","source":0,"sourceIndex":2,"interface":"CAN1","dataDirection":1,"dataType":9,"signalTask":0,"connection":"","connectionMqtt":null,"vtab":null,"limits":null,"ranges":null}]
+[
+    {
+        "id": 10,
+        "name": "TBox Voltage",
+        "unit": "V",
+        "displayBounds": {
+            "min": 0,
+            "max": 50
+        },
+        "active": true,
+        "description": "TBox Voltage",
+        "numDigits": 3,
+        "noValueValue": "NaN",
+        "source": 0,
+        "sourceIndex": 0,
+        "interface": "",
+        "dataDirection": 1,
+        "dataType": 9,
+        "signalTask": 0,
+        "connection": "",
+        "connectionMqtt": null,
+        "vtab": null,
+        "limits": null,
+        "ranges": null
+    },
+    {
+        "id": 11,
+        "name": "TBox Temperature",
+        "unit": "°C",
+        "displayBounds": {
+            "min": 0,
+            "max": 50
+        },
+        "active": true,
+        "description": "TBox Temperature",
+        "numDigits": 0,
+        "noValueValue": "NaN",
+        "source": 0,
+        "sourceIndex": 1,
+        "interface": "",
+        "dataDirection": 1,
+        "dataType": 6,
+        "signalTask": 0,
+        "connection": "",
+        "connectionMqtt": null,
+        "vtab": null,
+        "limits": null,
+        "ranges": null
+    },
+    {
+        "id": 52,
+        "name": "GPS Status",
+        "unit": "",
+        "displayBounds": {
+            "min": 0,
+            "max": 1
+        },
+        "active": true,
+        "description": "GPS Status",
+        "numDigits": 0,
+        "noValueValue": "NaN",
+        "source": 0,
+        "sourceIndex": 2,
+        "interface": "",
+        "dataDirection": 1,
+        "dataType": 1,
+        "signalTask": 0,
+        "connection": "",
+        "connectionMqtt": null,
+        "vtab": null,
+        "limits": null,
+        "ranges": null
+    },
+    {
+        "id": 53,
+        "name": "GPS Visible sats",
+        "unit": "",
+        "displayBounds": {
+            "min": 0,
+            "max": 32
+        },
+        "active": true,
+        "description": "GPS Visible sats",
+        "numDigits": 0,
+        "noValueValue": "NaN",
+        "source": 0,
+        "sourceIndex": 3,
+        "interface": "",
+        "dataDirection": 1,
+        "dataType": 1,
+        "signalTask": 0,
+        "connection": "",
+        "connectionMqtt": null,
+        "vtab": null,
+        "limits": null,
+        "ranges": null
+    },
+    {
+        "id": 54,
+        "name": "GPS satellites number",
+        "unit": "",
+        "displayBounds": {
+            "min": 0,
+            "max": 24
+        },
+        "active": true,
+        "description": "GPS numSvs",
+        "numDigits": 0,
+        "noValueValue": "NaN",
+        "source": 0,
+        "sourceIndex": 4,
+        "interface": "",
+        "dataDirection": 1,
+        "dataType": 1,
+        "signalTask": 0,
+        "connection": "",
+        "connectionMqtt": null,
+        "vtab": null,
+        "limits": null,
+        "ranges": null
+    },
+    {
+        "id": 55,
+        "name": "Latitude",
+        "unit": "°",
+        "displayBounds": {
+            "min": -90,
+            "max": 90
+        },
+        "active": true,
+        "description": "GPS Latitude",
+        "numDigits": 6,
+        "noValueValue": "NaN",
+        "source": 0,
+        "sourceIndex": 5,
+        "interface": "",
+        "dataDirection": 1,
+        "dataType": 9,
+        "signalTask": 3,
+        "connection": "",
+        "connectionMqtt": null,
+        "vtab": null,
+        "limits": null,
+        "ranges": null
+    },
+    {
+        "id": 56,
+        "name": "Longitude",
+        "unit": "°",
+        "displayBounds": {
+            "min": -180,
+            "max": 180
+        },
+        "active": true,
+        "description": "GPS Longitude",
+        "numDigits": 6,
+        "noValueValue": "NaN",
+        "source": 0,
+        "sourceIndex": 6,
+        "interface": "",
+        "dataDirection": 1,
+        "dataType": 9,
+        "signalTask": 2,
+        "connection": "",
+        "connectionMqtt": null,
+        "vtab": null,
+        "limits": null,
+        "ranges": null
+    },
+    {
+        "id": 57,
+        "name": "GPS Speed",
+        "unit": "km/h",
+        "displayBounds": {
+            "min": 0.0,
+            "max": 2359.259999999999998
+        },
+        "active": true,
+        "description": "GPS Speed",
+        "numDigits": 1,
+        "noValueValue": "NaN",
+        "source": 0,
+        "sourceIndex": 7,
+        "interface": "",
+        "dataDirection": 1,
+        "dataType": 9,
+        "signalTask": 0,
+        "connection": "",
+        "connectionMqtt": null,
+        "vtab": null,
+        "limits": null,
+        "ranges": null
+    },
+    {
+        "id": 58,
+        "name": "GPS Altitude",
+        "unit": "m",
+        "displayBounds": {
+            "min": -600.0,
+            "max": 9000.0
+        },
+        "active": true,
+        "description": "GPS Altitude",
+        "numDigits": 1,
+        "noValueValue": "NaN",
+        "source": 0,
+        "sourceIndex": 8,
+        "interface": "",
+        "dataDirection": 1,
+        "dataType": 9,
+        "signalTask": 0,
+        "connection": "",
+        "connectionMqtt": null,
+        "vtab": null,
+        "limits": null,
+        "ranges": null
+    },
+    {
+        "id": 59,
+        "name": "UTC Year",
+        "unit": "",
+        "displayBounds": {
+            "min": 1970,
+            "max": 2099
+        },
+        "active": true,
+        "description": "UTC Year",
+        "numDigits": 0,
+        "noValueValue": "NaN",
+        "source": 0,
+        "sourceIndex": 9,
+        "interface": "",
+        "dataDirection": 1,
+        "dataType": 3,
+        "signalTask": 0,
+        "connection": "",
+        "connectionMqtt": null,
+        "vtab": null,
+        "limits": null,
+        "ranges": null
+    },
+    {
+        "id": 60,
+        "name": "UTC Month",
+        "unit": "",
+        "displayBounds": {
+            "min": 0,
+            "max": 12
+        },
+        "active": true,
+        "description": "UTC Month",
+        "numDigits": 0,
+        "noValueValue": "NaN",
+        "source": 0,
+        "sourceIndex": 10,
+        "interface": "",
+        "dataDirection": 1,
+        "dataType": 3,
+        "signalTask": 0,
+        "connection": "",
+        "connectionMqtt": null,
+        "vtab": null,
+        "limits": null,
+        "ranges": null
+    },
+    {
+        "id": 61,
+        "name": "UTC Day",
+        "unit": "",
+        "displayBounds": {
+            "min": 0,
+            "max": 31
+        },
+        "active": true,
+        "description": "UTC Day",
+        "numDigits": 0,
+        "noValueValue": "NaN",
+        "source": 0,
+        "sourceIndex": 11,
+        "interface": "",
+        "dataDirection": 1,
+        "dataType": 3,
+        "signalTask": 0,
+        "connection": "",
+        "connectionMqtt": null,
+        "vtab": null,
+        "limits": null,
+        "ranges": null
+    },
+    {
+        "id": 62,
+        "name": "UTC Hour",
+        "unit": "",
+        "displayBounds": {
+            "min": 0,
+            "max": 24
+        },
+        "active": true,
+        "description": "UTC Hour",
+        "numDigits": 0,
+        "noValueValue": "NaN",
+        "source": 0,
+        "sourceIndex": 12,
+        "interface": "",
+        "dataDirection": 1,
+        "dataType": 3,
+        "signalTask": 0,
+        "connection": "",
+        "connectionMqtt": null,
+        "vtab": null,
+        "limits": null,
+        "ranges": null
+    },
+    {
+        "id": 63,
+        "name": "UTC Minute",
+        "unit": "",
+        "displayBounds": {
+            "min": 0,
+            "max": 60
+        },
+        "active": true,
+        "description": "UTC Minute",
+        "numDigits": 0,
+        "noValueValue": "NaN",
+        "source": 0,
+        "sourceIndex": 13,
+        "interface": "",
+        "dataDirection": 1,
+        "dataType": 3,
+        "signalTask": 0,
+        "connection": "",
+        "connectionMqtt": null,
+        "vtab": null,
+        "limits": null,
+        "ranges": null
+    },
+    {
+        "id": 64,
+        "name": "UTC Second",
+        "unit": "",
+        "displayBounds": {
+            "min": 0.0,
+            "max": 60.00
+        },
+        "active": true,
+        "description": "UTC Second",
+        "numDigits": 2,
+        "noValueValue": "NaN",
+        "source": 0,
+        "sourceIndex": 14,
+        "interface": "",
+        "dataDirection": 1,
+        "dataType": 9,
+        "signalTask": 0,
+        "connection": "",
+        "connectionMqtt": null,
+        "vtab": null,
+        "limits": null,
+        "ranges": null
+    },
+    {
+        "id": 115,
+        "name": "C_56601399_1_C1",
+        "unit": "°C",
+        "displayBounds": {
+            "min": -60,
+            "max": 1370
+        },
+        "active": true,
+        "description": "C_56601399_1",
+        "numDigits": 2,
+        "noValueValue": "NaN",
+        "source": 0,
+        "sourceIndex": 15,
+        "interface": "",
+        "dataDirection": 1,
+        "dataType": 3,
+        "signalTask": 0,
+        "connection": "",
+        "connectionMqtt": null,
+        "vtab": null,
+        "limits": null,
+        "ranges": null
+    },
+    {
+        "id": 116,
+        "name": "C_56601399_2_C1",
+        "unit": "°C",
+        "displayBounds": {
+            "min": -60,
+            "max": 1370
+        },
+        "active": true,
+        "description": "C_56601399_2",
+        "numDigits": 2,
+        "noValueValue": "NaN",
+        "source": 0,
+        "sourceIndex": 16,
+        "interface": "",
+        "dataDirection": 1,
+        "dataType": 3,
+        "signalTask": 0,
+        "connection": "",
+        "connectionMqtt": null,
+        "vtab": null,
+        "limits": null,
+        "ranges": null
+    },
+    {
+        "id": 117,
+        "name": "C_56601399_3_C1",
+        "unit": "°C",
+        "displayBounds": {
+            "min": -60,
+            "max": 1370
+        },
+        "active": true,
+        "description": "C_56601399_3",
+        "numDigits": 2,
+        "noValueValue": "NaN",
+        "source": 0,
+        "sourceIndex": 17,
+        "interface": "",
+        "dataDirection": 1,
+        "dataType": 3,
+        "signalTask": 0,
+        "connection": "",
+        "connectionMqtt": null,
+        "vtab": null,
+        "limits": null,
+        "ranges": null
+    },
+    {
+        "id": 118,
+        "name": "C_56601399_4_C1",
+        "unit": "°C",
+        "displayBounds": {
+            "min": -60,
+            "max": 1370
+        },
+        "active": true,
+        "description": "C_56601399_4",
+        "numDigits": 2,
+        "noValueValue": "NaN",
+        "source": 0,
+        "sourceIndex": 18,
+        "interface": "",
+        "dataDirection": 1,
+        "dataType": 3,
+        "signalTask": 0,
+        "connection": "",
+        "connectionMqtt": null,
+        "vtab": null,
+        "limits": null,
+        "ranges": null
+    },
+    {
+        "id": 119,
+        "name": "C_56601399_1_C2",
+        "unit": "°C",
+        "displayBounds": {
+            "min": -60,
+            "max": 1370
+        },
+        "active": true,
+        "description": "C_56601399_1",
+        "numDigits": 2,
+        "noValueValue": "NaN",
+        "source": 0,
+        "sourceIndex": 19,
+        "interface": "",
+        "dataDirection": 1,
+        "dataType": 3,
+        "signalTask": 0,
+        "connection": "",
+        "connectionMqtt": null,
+        "vtab": null,
+        "limits": null,
+        "ranges": null
+    },
+    {
+        "id": 120,
+        "name": "C_56601399_2_C2",
+        "unit": "°C",
+        "displayBounds": {
+            "min": -60,
+            "max": 1370
+        },
+        "active": true,
+        "description": "C_56601399_2",
+        "numDigits": 2,
+        "noValueValue": "NaN",
+        "source": 0,
+        "sourceIndex": 20,
+        "interface": "",
+        "dataDirection": 1,
+        "dataType": 3,
+        "signalTask": 0,
+        "connection": "",
+        "connectionMqtt": null,
+        "vtab": null,
+        "limits": null,
+        "ranges": null
+    },
+    {
+        "id": 121,
+        "name": "C_56601399_3_C2",
+        "unit": "°C",
+        "displayBounds": {
+            "min": -60,
+            "max": 1370
+        },
+        "active": true,
+        "description": "C_56601399_3",
+        "numDigits": 2,
+        "noValueValue": "NaN",
+        "source": 0,
+        "sourceIndex": 21,
+        "interface": "",
+        "dataDirection": 1,
+        "dataType": 3,
+        "signalTask": 0,
+        "connection": "",
+        "connectionMqtt": null,
+        "vtab": null,
+        "limits": null,
+        "ranges": null
+    },
+    {
+        "id": 122,
+        "name": "C_56601399_4_C2",
+        "unit": "°C",
+        "displayBounds": {
+            "min": -60,
+            "max": 1370
+        },
+        "active": true,
+        "description": "C_56601399_4",
+        "numDigits": 2,
+        "noValueValue": "NaN",
+        "source": 0,
+        "sourceIndex": 22,
+        "interface": "",
+        "dataDirection": 1,
+        "dataType": 3,
+        "signalTask": 0,
+        "connection": "",
+        "connectionMqtt": null,
+        "vtab": null,
+        "limits": null,
+        "ranges": null
+    }
+]
